  displayed in 'info devices'.

* Changed commands

info threads [-gid] [-stopped] [ID]...
  This command now takes an optional flag, '-stopped', that causes only
  the stopped threads to be printed.  The flag can be useful to get a
  reduced list when there is a large number of unstopped threads.

* Add convenience variable `$_simd_lane`.

* MI changes

  ** '-break-insert -l'

     Added optional -l <simd-lane-id> argument to MI command -break-insert.
     A lane can be specified only together with the thread: user must provide
     a thread with -p argument.

     MI result output for -break-insert command will also contain
     lane="simd-lane-id" information if -l argument was specified.

     Also the MI output of -break-list and -break-info commands will have
     lane="simd-lane-id" information if the breakpoint is thread and SIMD lane
     spefific.

  ** '-thread-info'

     If a thread is stopped, available, and has SIMD lanes, MI output
     of '-thread-info' for such a thread contains 'execution-mask' and
     'simd-width' fields.  If a thread is stopped at a breakpoint, add
     'hit-lanes-mask' to its output.  The mask encodes for which lanes
     the breakpoint condition was evaluated to true.

*** Changes in GDB 13

* MI version 1 is deprecated, and will be removed in GDB 14.

* GDB now supports dumping memory tag data for AArch64 MTE.  It also supports
  reading memory tag data for AArch64 MTE from core files generated by
  the gcore command or the Linux kernel.

  When a process uses memory-mapped pages protected by memory tags (for
  example, AArch64 MTE), this additional information will be recorded in
  the core file in the event of a crash or if GDB generates a core file
  from the current process state.  GDB will show this additional information
  automatically, or through one of the memory-tag subcommands.

* "info breakpoints" now displays enabled breakpoint locations of
  disabled breakpoints as in the "y-" state.  For example:
